fix bug immutable list